# aiogram3-template

./: .gitignore  Dockerfile  README.md  app.py  pyproject.toml
handlers/user/: main.py
settings/: .env
src/: app.py  bot.py  config.json  config.py  env.py  keyboards.py  modules.py
src/db/: __init__.py  database.py
src/db/tables/: users.py
src/handlers/admin/: main.py
src/handlers/user/: __init__.py  inline.py  main.py
src/handlers/user/states/: __init__.py  form.py
src/middlewares/: mw.py
src/services/: APScheduler.py
src/settings/: config.py
src/utils/: functions.py  keyboards.py
src/utils/db_toolkit/SQLALchemy/utils/: databases.py  models.py
src/utils/db_toolkit/SQLALchemy/utils/tables/: users.py
utils/: functions.py
utils/db_toolkit/SQLALchemy/: db.py
utils/middlewares/: tech_works.py
