[tool.poetry]
name = "aiogram 3-x template"
version = "0.2.0"
description = "Simple template to make bots using aiogram 3.x"
authors = ["Enveloss"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "3.0.0b6"
python-dotenv = "0.21.0"
apscheduler = "3.9.1.post1"
sqlalchemy = "1.4.45"
asyncpg = "0.27.0"
pydantic = "^1.10.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
